--- a/src/app/shared/forms/status-selector/status-selector.component.html
+++ b/src/app/shared/forms/status-selector/status-selector.component.html
@@ -39,7 +39,7 @@
                   67.4c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3L224 419.8 46.3 508.6c-15.8 7.9-35
                   1.5-42.9-14.3s-1.5-35 14.3-42.9L152.4 384 17.7 316.6C1.9 308.7-4.5 289.5 3.4 273.7z"/>
 </svg>
-          <span>{{ status }}</span>
+          <span [attr.data-cy]="'offerStatus' + status">{{ status }}</span>
         </span>
       </li>
     }
