--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -107,6 +107,7 @@
 
 <!-- Drawer Reutilizable -->
 <app-price-plan-drawer
+  data-cy="pricePlanDrawer"
   [drawerId]="'drawer-product'"
   [productOff]="productOff"
   [prodSpec]="prodSpec"
