--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -82,7 +82,7 @@
         </div>
         <div class="block">
           <div>
-            <textarea id="large-input" name="orderNote"
+            <textarea id="large-input" name="orderNote" [(ngModel)]="orderNote"
               class="flex w-full min-h-fit dark:text-white dark:bg-secondary-300 dark:border-secondary-200 dark:focus:border-primary-100 items-center rounded px-4 py-3 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base focus:border-accent"
               autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
               rows="4">
