more cypress tags

--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -7,7 +7,7 @@
 }
 
 <!-- drawer component -->
-<div [id]="drawerId"
+<div data-cy="toCartDrawer" [id]="drawerId"
      class="fixed top-0 right-0 z-40 h-screen pt-24 overflow-y-auto transition-transform translate-x-full bg-secondary-50 dark:bg-gray-800 flex flex-col"
      [class.translate-x-0]="isOpen"
      [class.translate-x-full]="!isOpen"
