ADD first approach to custom offer form

--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -106,6 +106,9 @@
         @if(show_update_catalog){
           <update-catalog [cat]="catalog_to_update"></update-catalog>
         }
+        @if(show_create_custom_offer){
+          <app-custom-offer [offer]="offer_to_update"></app-custom-offer>
+        }
     </div>
 </div>
 @if(feedback){
